; ModuleID = '/home/carl/AnghaBench/8cc/extr_lex.c_lex_string.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_lex.c_lex_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EOF = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"unconsumed input: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @lex_string(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @make_file_string(i8* %5)
  %7 = call i32 @stream_stash(i32 %6)
  %8 = call i32* (...) @do_read_token()
  store i32* %8, i32** %3, align 8
  %9 = call i32 @next(i8 signext 10)
  %10 = call i32 @get_pos(i32 0)
  store i32 %10, i32* %4, align 4
  %11 = call i64 (...) @peek()
  %12 = load i64, i64* @EOF, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @errorp(i32 %15, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %16)
  br label %18

18:                                               ; preds = %14, %1
  %19 = call i32 (...) @stream_unstash()
  %20 = load i32*, i32** %3, align 8
  ret i32* %20
}

declare dso_local i32 @stream_stash(i32) #1

declare dso_local i32 @make_file_string(i8*) #1

declare dso_local i32* @do_read_token(...) #1

declare dso_local i32 @next(i8 signext) #1

declare dso_local i32 @get_pos(i32) #1

declare dso_local i64 @peek(...) #1

declare dso_local i32 @errorp(i32, i8*, i8*) #1

declare dso_local i32 @stream_unstash(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
